...
    return new Center(
      child: Column(children: [
        Container(
            color: Colors.grey[200],
            child: Card(
              child: ListTile(
                key: Key('log-out'),
                title: Text('Logout'),
                trailing: Icon(Icons.keyboard_arrow_right),
                onTap: () {
                  // Update the state of the app
                  Navigator.of(context).pushAndRemoveUntil(
                      MaterialPageRoute(builder: (context) => LoginScreen()),
...
